frontendFiles/courseOverview/templateStyles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  .umdHeader {
      background-color: #E21833;
      color: white;
  }

  .header-container {
    color: white;
    background-image: linear-gradient(#981E32, #EAAB00, #000000);
    display: flex;
    justify-content: flex-start;
  }
  
  .header {
    width: 900px;
    height: 150px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  ul {
    list-style-type: none;
    display: flex;
    justify-content: space-evenly;
    margin: 0;
    padding: 0;
    overflow: hidden;
    border: 1px solid #ffffff;
    background-color: #ffffff;
  }
  
  li {
    float: left;
  }
  
  li a {
    display: block;
    color: #666;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }
  
  li a:hover:not(.active) {
    background-color: #666;
    color:#ffffff;
  }
  
  li a.active {
    color: white;
    background-color: #666;
  }

  .column {
      float: left;
      width: 25%;
      height: 768px;
      background-color: #C4C4C4;
  }
  
  .fieldList {
      float: right;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
  }

